udpate package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wu-spinner",
-  "version": "0.0.1",
-  "description": "Web Up animated loading spinner",
+  "version": "0.0.2",
+  "description": "Web Up animated loading spinner web component",
   "files": [
     "dist/"
   ],
@@ -24,14 +24,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ionic-team/stencil-app-starter.git"
+    "url": "git+https://github.com/seanwuapps/wu-spinner.git"
   },
   "author": "Ionic Team",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ionic-team/stencil"
+    "url": "https://github.com/seanwuapps/wu-spinner"
   },
-  "homepage": "https://github.com/ionic-team/stencil",
+  "homepage": "https://github.com/seanwuapps/wu-spinner",
   "jest": {
     "transform": {
       "^.+\\.(ts|tsx)$": "<rootDir>/node_modules/@stencil/core/testing/jest.preprocessor.js"
